--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="header">
-        <nav class="navbar navbar-expand-lg navbar-light bg-transperant fixed-top">
+        <nav class="navbar navbar-expand-lg navbar-light bg-transperant">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#"><img src="./assest/Logo.png" /></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -46,7 +46,7 @@
     </div>
     <div class="content-top container">
         <div class="row">
-            <div class="col-5 content-left d-flex justify-content-center align-items-center flex-column">
+            <div class="col-12 col-sm-5 content-left d-flex justify-content-center align-items-center flex-column">
                 <p class="fs-1" style="font-weight: 800;">A special credit card made for Developers.</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vehicula massa in enim luctus. Rutrum arcu.
                 </p>
@@ -55,7 +55,7 @@
                         placeholder="Enter email address">
                     <button class="btn btn-dark my-2 btn-lg me-2 rounded-3">Get Free Card</button>
                 </div>
-                <div class="inf d-flex justify-content-between w-100">
+                <div class="inf d-flex justify-content-between w-100 ">
                     <p><span class="fs-2 me-1 " style="font-weight: 500;">2943</span>
                         <span class="text-wrap" style="max-width: 20px;display: inline-block; font-size: 13px;">Cards
                             Delivered</span>
@@ -66,7 +66,7 @@
                     </p>
                 </div>
             </div>
-            <div class="col-7" style=" position: relative; min-height: 800px;">
+            <div class="col-7 d-none d-sm-block" style=" position: relative; min-height: 800px;">
                 <div alt="" class="bg-card"></div>
                 <img src="./assest/Card 1.png" alt="" class="card-1">
                 <img src="./assest/Card 2.png" alt="" class="card-2">
